--- a/Docker/Dockerfiles.txt
+++ b/Docker/Dockerfiles.txt
@@ -1,3 +1,6 @@
+# Format to specify tag
+FROM nginx:mainline-alpine3.20-slim@sha256:e9293c9bedb0db866e7d2b69e58131db4c2478e6cd216cdd99b134830703983a
+
 FROM	
 This instruction sets a build stage for the container as well as setting the base image (operating system). All Dockerfiles must start with this.	
 e.g. FROM ubuntu
